869.	[func]		tomek
	'mac-sources' configuration parameter added. The DHCPv6 server
	can now be configured to use various MAC/Hardware address
	sources.
	(Trac #3554, git 2e7c32e7c19372f0c97968ef7c8256509d80fdfc)

868.    [func]          marcin
        DHCPv4 server configuration allows for selection of the
        address on the interface that server should listen on.
        This is specifically useful in the environments with
        multiple IPv4 addresses assigned to one interface.
        (Trac #3539, git ff71887c605eedc3914bacfd2e551da7bddcc0d6)

867.	[func]		marcin
	libdhcpsrv: Allocation Engine uses statically assigned
	addresses when it allocates or renews leases for the
	DHCPv4 clients.
	(Trac #3564, git 7b192fe314c12e38622742b3b338e997934f862f)

866.	[doc]		stephen
	Corrected documentation concering the way to configure hooks
	libraries.
	(Trac #3635, git 42d1c98a2e66ab7fc3e372365edad1f5709df885)

865.	[func]		marcin
	Host reservations can be specified in the DHCPv4 and DHCPv6
	servers configuration. The reservations are loaded, but they
	are currently unused.
	(Trac #3562, git 1ba5ec3b7831ef8126be17b9542d9b89a419e7dd)
	(Trac #3628, git 00b49298ec5e5e5c722e5938547c86c954fc76e1)

864.	[func]		tomek
	MySQL backend is now able to store information about hardware
	addresses and associated information in DHCPv6.
	(Trac #3556, git 08a29d8d2374bc3c6b3799d5dd97f586ee869392)

863.	[func]		tomek
	A new tool called kea-admin added. It allows database maintenance.
	Initalization of a new database, version check and upgrade between
	version is now supported. Currently the only backend supported is
	mysql, but support for memfile and pgsql is planned.
	(Trac #3599, git cf22f8d212f2435957f89b51722f8e26e14635f2)

862.	[func]		dgutier, tomek
	Support for client link-layer address option (RFC6939) has
	been added.
	(Trac #3551, git dabdf965d92085f86d5e96c8dadce0f0a8f7c8e3)

861.	[func]		marcin
	The configuration parameters for a DHCPv4 and DHCPv6 options are now